; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bxe/extr_bxe.c_bxe_flr_clnup_poll_count.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bxe/extr_bxe.c_bxe_flr_clnup_poll_count.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bxe_softc = type { i32 }

@FLR_POLL_CNT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.bxe_softc*)* @bxe_flr_clnup_poll_count to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bxe_flr_clnup_poll_count(%struct.bxe_softc* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.bxe_softc*, align 8
  store %struct.bxe_softc* %0, %struct.bxe_softc** %3, align 8
  %4 = load %struct.bxe_softc*, %struct.bxe_softc** %3, align 8
  %5 = call i64 @CHIP_REV_IS_EMUL(%struct.bxe_softc* %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load i32, i32* @FLR_POLL_CNT, align 4
  %9 = mul nsw i32 %8, 2000
  store i32 %9, i32* %2, align 4
  br label %19

10:                                               ; preds = %1
  %11 = load %struct.bxe_softc*, %struct.bxe_softc** %3, align 8
  %12 = call i64 @CHIP_REV_IS_FPGA(%struct.bxe_softc* %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %10
  %15 = load i32, i32* @FLR_POLL_CNT, align 4
  %16 = mul nsw i32 %15, 120
  store i32 %16, i32* %2, align 4
  br label %19

17:                                               ; preds = %10
  %18 = load i32, i32* @FLR_POLL_CNT, align 4
  store i32 %18, i32* %2, align 4
  br label %19

19:                                               ; preds = %17, %14, %7
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}

declare dso_local i64 @CHIP_REV_IS_EMUL(%struct.bxe_softc*) #1

declare dso_local i64 @CHIP_REV_IS_FPGA(%struct.bxe_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
